--- a/new/assets/css/main.css
+++ b/new/assets/css/main.css
@@ -2656,10 +2656,13 @@
 
 		.features article {
 			padding: 1.75em 1.75em 0.1em 1.75em ;
-			background-color: #9E9E9E;
+			background-color: #CFD8DC;
 			border-radius: 5px;
 			margin: 1.5em 3em 1.5em 0;
 			width: calc(50% - 1.5em);
+		}
+		.features article p{
+			color: black;
 		}
 
 			.features article:nth-child(2n) {
@@ -3270,13 +3273,13 @@
 	}
 
 	.wrapper {
-		background-color: #616161;
+		background-color: #607D8B;
 		margin: 6.5em 0;
 		position: relative;
 	}
 
 		.wrapper:before, .wrapper:after {
-			background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23616161%3B' /%3E%3C/svg%3E");
+			background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23607D8B%3B' /%3E%3C/svg%3E");
 		}
 
 		.wrapper:before, .wrapper:after {
